--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>El Coste</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        
+        <header>
+            
+        </header>
     </body>
 </html>
