--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     </head>
     <body>
         <header>
-            
+            <p class="headerMessage">
+                The Best Fast Food In<br>Medellín
+            </p>
+            <nav>
+                <div class="dropBtn">
+                    <a>Menu</a>
+                </div>    
+                <div class="dropContent">
+                    <a href="specials.html">Specials</a>
+                    <a href="dayFood.html">Food of the Day</a>
+                    <a href="apetizers.html">Apetizers</a>            
+                </div>
+            </nav>
         </header>
     </body>
 </html>
