added a picure and placed the nav at the bottom of the nav

--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
             <nav>
                 <div class="dropBtn">
                     <a>Menu</a>
-                </div>    
+                </div>
                 <div class="dropContent">
+                    <hr class="line">
                     <a href="specials.html">Specials</a>
+                    <hr class="line">
                     <a href="dayFood.html">Food of the Day</a>
+                    <hr class="line">
                     <a href="apetizers.html">Apetizers</a>            
                 </div>
             </nav>
         </header>
+        <figure role="img">
+            <img alt="A cute cat." src="images/imgDondeCoste3.jpg">
+            <figcaption>This is my cat, Albert.</figcaption>
+        </figure>
     </body>
 </html>
