Added a script.js, new images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>El Coste</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script src="js/script.js"></script>
     </head>
     <body>
         <header>
@@ -11,7 +12,7 @@
                 The Best Fast Food In<br>Medellín
             </p>
             <nav>
-                <div class="dropBtn">
+                <div class="dropBtn" onclick="clickOnNav()">
                     <a>Menu</a>
                 </div>
                 <div class="dropContent">
@@ -24,16 +25,17 @@
                 </div>
             </nav>
         </header>
+        
         <div class="option">
-            <a href="specials.html"><img alt="Here you can see the specials." src="images/imgDondeCoste3.jpg"></a>
+            <a href="specials.html"><img alt="Here you can see the specials." src="images/especial.jpg"></a>
             <span>This are the Specials.</span>
         </div>
         <div class="option">
-            <a href="dayFood.html"><img alt="Here you can see the food of the day." src="images/imgDondeCoste3.jpg"></a>
+            <a href="dayFood.html"><img alt="Here you can see the food of the day." src="images/day.png"></a>
             <span>This is the food of the day.</span>
         </div>
         <div class="option">
-            <a href="apetizers.html"><img alt="Here you can see the apetizers." src="images/imgDondeCoste3.jpg"></a>
+            <a href="apetizers.html"><img alt="Here you can see the apetizers." src="images/apetizer.jpg"></a>
             <span>This are the apetizers.</span>
         </div>
         <div class="option">
