added inicio, nav bigger

--- a/dayFood.html
+++ b/dayFood.html
@@ -19,6 +19,8 @@
             </div>
             <div class="dropContent">
                 <hr class="line">
+                <a href="index.html">Inicio</a>
+                <hr class="line">
                 <a href="specials.html">Specials</a>
                 <hr class="line">
                 <a href="dayFood.html">Food of the Day</a>
