Added appetizer page

--- a/dayFood.html
+++ b/dayFood.html
@@ -33,7 +33,7 @@
                 This is the food of the day, it has some ingredients, it taste delicious,
                 just for today, tomorrow it will not be delicious.
             </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/especial.jpg">
+            <img class="foodImage" alt="Here you can see the specials." src="images/fast-food.jpg">
         </div>
         <footer>
             <p>SOME INFORMATION ABOUT THE PLACE, LIKE ADDRESS, SCHEDULE, AND SOME OTHER THINGS.</p>
