added the wide view and resized the header

--- a/apetizers.html
+++ b/apetizers.html
@@ -25,36 +25,38 @@
                 <hr class="line">
                 <a href="dayFood.html">Food of the Day</a>
                 <hr class="line">
-                <a href="apetizers.html">Apetizers</a>            
+                <a id="active" href="apetizers.html">Apetizers</a>            
             </div>
         </nav>
-        <div class="foodBox">
-            <p class="description">This is the <strong>first</strong> appetizer.<br>
-                This appetizer has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/appetizer1.jpg">
-        </div>
-        <div class="foodBox">
-            <p class="description">This is the <strong>second</strong> appetizer.<br>
-                This appetizer has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/appetizer2.jpg">
-        </div>
-        <div class="foodBox">
-            <p class="description">This is the <strong>third</strong> appetizer.<br>
-                This appetizer has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/appetizer3.jpg">
-        </div>
-        <div class="foodBox">
-            <p class="description">This is the <strong>fourth</strong> appetizer.<br>
-                This appetizer has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/appetizer4.jpg">
+        <div class="container">
+            <div class="foodBox">
+                <p class="description">This is the <strong>first</strong> appetizer.<br>
+                    This appetizer has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/appetizer1.jpg">
+            </div>
+            <div class="foodBox">
+                <p class="description">This is the <strong>second</strong> appetizer.<br>
+                    This appetizer has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/appetizer2.jpg">
+            </div>
+            <div class="foodBox">
+                <p class="description">This is the <strong>third</strong> appetizer.<br>
+                    This appetizer has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/appetizer3.jpg">
+            </div>
+            <div class="foodBox">
+                <p class="description">This is the <strong>fourth</strong> appetizer.<br>
+                    This appetizer has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/appetizer4.jpg">
+            </div>
         </div>
         <footer>
             <p>SOME INFORMATION ABOUT THE PLACE, LIKE ADDRESS, SCHEDULE, AND SOME OTHER THINGS.</p>
