--- a/dayFood.html
+++ b/dayFood.html
@@ -23,7 +23,7 @@
                 <hr class="line">
                 <a href="specials.html">Specials</a>
                 <hr class="line">
-                <a href="dayFood.html">Food of the Day</a>
+                <a id="active" href="dayFood.html">Food of the Day</a>
                 <hr class="line">
                 <a href="apetizers.html">Apetizers</a>            
             </div>
