--- a/specials.html
+++ b/specials.html
@@ -21,40 +21,42 @@
                 <hr class="line">
                 <a href="index.html">Inicio</a>
                 <hr class="line">
-                <a href="specials.html">Specials</a>
+                <a id="active" href="specials.html">Specials</a>
                 <hr class="line">
                 <a href="dayFood.html">Food of the Day</a>
                 <hr class="line">
                 <a href="apetizers.html">Apetizers</a>            
             </div>
         </nav>
-        <div class="foodBox">
-            <p class="description">This is the <strong>first</strong> special plate.<br>
-                This special plate has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/firstSpecial.jpg">
-        </div>
-        <div class="foodBox">
-            <p class="description">This is the <strong>second</strong> special plate.<br>
-                This special plate has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/secondSpecial.jpg">
-        </div>
-        <div class="foodBox">
-            <p class="description">This is the <strong>third</strong> special plate.<br>
-                This special plate has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/thirdSpecial.jpeg">
-        </div>
-        <div class="foodBox">
-            <p class="description">This is the <strong>fourth</strong> special plate.<br>
-                This special plate has some ingredients, it taste delicious,
-                just for today, tomorrow it will be as special as today.
-            </p>
-            <img class="foodImage" alt="Here you can see the specials." src="images/forthSpecial.jpg">
+        <div class="container">
+            <div class="foodBox">
+                <p class="description">This is the <strong>first</strong> special plate.<br>
+                    This special plate has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/firstSpecial.jpg">
+            </div>
+            <div class="foodBox">
+                <p class="description">This is the <strong>second</strong> special plate.<br>
+                    This special plate has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/secondSpecial.jpg">
+            </div>
+            <div class="foodBox">
+                <p class="description">This is the <strong>third</strong> special plate.<br>
+                    This special plate has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/thirdSpecial.jpeg">
+            </div>
+            <div class="foodBox">
+                <p class="description">This is the <strong>fourth</strong> special plate.<br>
+                    This special plate has some ingredients, it taste delicious,
+                    just for today, tomorrow it will be as special as today.
+                </p>
+                <img class="foodImage" alt="Here you can see the specials." src="images/forthSpecial.jpg">
+            </div>
         </div>
         <footer>
             <p>SOME INFORMATION ABOUT THE PLACE, LIKE ADDRESS, SCHEDULE, AND SOME OTHER THINGS.</p>
