--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="option">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d350.56464244869886!2d-75.60294617021015!3d6.239176118991082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429eaec71e401%3A0xb6d3f295238fed4f!2sBelen%2C%20Medell%C3%ADn%2C%20Medellin%2C%20Antioquia!5e0!3m2!1sen!2sco!4v1608510656908!5m2!1sen!2sco" 
-                width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>                             
+                allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>                             
                 <span>Location</span>
             </div>
         </div>
