--- a/apetizers.html
+++ b/apetizers.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>El Coste</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="js/script.js"></script>
     </head>
     <body>
